5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1573_1334.log
== SUBMITION (2019-03-11 15:44:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2...)

print("Multiplicacao: ", .4*2..)

print("Divisao: ", .16/2..)

print("Resto: ", ...)

print("Potenciacao: ", ..2**3.)
-- EXECUTION TIME:
0.161668
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 3
    print("Subtracao: ", 10-2...)
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2...)

print("Multiplicacao: ", .4*2..)

print("Divisao: ", .16/2..)

print("Resto: ", 68%10...)

print("Potenciacao: ", ..2**3.)
-- EXECUTION TIME:
0.190213
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 3
    print("Subtracao: ", 10-2...)
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 68%10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.141929
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
